# neshny

./: .gitignore  Core.cpp  Core.h  EditorViewers.cpp  EditorViewers.h  EntityGL.cpp  EntityGL.h  EntityWebGPU.cpp  EntityWebGPU.h  GLUtils.cpp  GLUtils.h  GPUEntity.cpp  GPUEntity.h  Geometry.cpp  Geometry.h  Headers.h  HexGrid.h  IncludeAll.cpp  IncludeAll.h  LICENSE  LinearAlgebra.h  NeshnyStructs.h  NeshnyUtils.cpp  NeshnyUtils.h  Pipeline.cpp  Pipeline.h  PipelineGL.cpp  PipelineGL.h  PipelineWebGPU.cpp  PipelineWebGPU.h  Preprocessor.cpp  Preprocessor.h  README.md  Resources.h  Serialization.h  Testing.cpp  Testing.h  Triple.cpp  Triple.h  Utils.cpp  (+4 more)
CMake/: CMakeEmbedded.txt  CMakeUnitTests.txt  EmbeddedFiles.txt  EmbeddedShaders.txt  Jumbo.txt  MacOS_WebGPU_Jumbo.txt  OpenGL_Jumbo.txt  UnitTests.txt  WebGPU_Jumbo.txt  Windows_WebGPU_Jumbo.txt
Examples/EmptyQT+SDL/: .gitignore  CMakeLists.txt
Examples/EmptyQT+SDL/src/: Engine.cpp  PreCompiledHeader.cpp  PreCompiledHeader.h
Examples/EmptyQT+SDL/src/Shaders/: Fullscreen.frag
Examples/EmptyQT+SDLJumboBuild/: .gitignore  CMakeLists.txt
Examples/EmptyQT+SDLJumboBuild/src/: Engine.cpp  Engine.h  PreCompiledHeader.cpp  PreCompiledHeader.h  main.cpp
Examples/EmptyQT+SDLUnityBuild/: CMakeLists.txt  UserSettings.cmake
Examples/EmptyQT+SDLUnityBuild/src/: Engine.cpp  PreCompiledHeader.cpp  PreCompiledHeader.h  main.cpp
Examples/EmptyQT+SDLUnityBuild/src/Shaders/: Fullscreen.frag
Examples/EmptyQTJumboBuild/: CMakeLists.txt  UserSettings.cmake
Examples/EmptyQTJumboBuild/src/: Engine.cpp  Engine.h  PreCompiledHeader.cpp  PreCompiledHeader.h  main.cpp
Examples/EmptyWebGPU_Jumbo/: .gitignore  CMakeLists.txt  UserSettings.cmake.template  dawn_setup.js
Examples/EmptyWebGPU_Jumbo/server/: server.js
Examples/EmptyWebGPU_Jumbo/src/: Engine.cpp  Engine.h  PreCompiledHeader.cpp  PreCompiledHeader.h  index.html  main.cpp
Examples/EmptyWebGPU_Jumbo/src/Shaders/: Quad.wgsl  Triangle.wgsl
Examples/Empty_QT_SDL/: CMakeEmbedded.txt  CMakeLists.txt  UserSettings.cmake.template
Examples/Empty_QT_SDL/src/: Engine.cpp  Engine.h  main.cpp
Examples/Empty_QT_SDL/src/Shaders/: Fullscreen.vert
Examples/Empty_QT_SDL/src/UnitTests/: MiscTest.cpp
Examples/Empty_QT_SDL_Jumbo/: .gitignore  CMakeEmbedded.txt  CMakeLists.txt  ProjectSettings.cmake.template  UserSettings.cmake.template
Examples/Empty_QT_SDL_Jumbo/src/: Engine.cpp  Engine.h  PreCompiledHeader.h
Examples/Empty_WebGPU_Jumbo/: .gitignore  CMakeLists.txt  ProjectSettings.cmake.template  UserSettings.cmake.template
Examples/Empty_WebGPU_Jumbo/src/: Engine.cpp  Engine.h  PreCompiledHeader.h  main.cpp
Examples/Empty_WebGPU_QT_Jumbo/: CMakeLists.txt  ProjectSettings.cmake.template  UserSettings.cmake.template
Examples/Empty_WebGPU_QT_Jumbo/src/: Engine.cpp  PreCompiledHeader.h  index.html
Examples/Empty_WebGPU_QT_Jumbo/src/Shaders/: Quad.wgsl
Examples/EntityInvaders/: .gitignore  CMakeLists.txt  ProjectSettings.cmake.template
Examples/EntityInvaders/src/: Engine.cpp  Engine.h  Entities.h  Game.cpp  Game.h  PreCompiledHeader.cpp  PreCompiledHeader.h  Specs.h  index.html  main.cpp
Examples/EntityInvaders/src/Shaders/: EnemyMove.wgsl  EnemyProjectileMove.wgsl  EnemyProjectileRender.wgsl  EnemyRender.wgsl  PlayerDroneMove.wgsl  PlayerDroneRender.wgsl  PlayerProjectileMove.wgsl  PlayerProjectileRender.wgsl  ShipRender.wgsl
Scripts/: dawn_setup.js  server.js
Shaders/: CacheUtils.wgsl  Death.comp  Death.wgsl  Debug.vert  DebugCircle.wgsl  DebugLine.wgsl  DebugPoint.vert  DebugTexture.wgsl  DebugTriangle.frag  EntityCreation.wgsl  GridCache2D.comp  GridCache2D.wgsl  GridCache2D.wgsl.template  PBR.glsl  Query.comp  Random.glsl  Random.wgsl  RayTracing.glsl  Skybox.vert  UnitTest.wgsl  UnitTestCache.wgsl  UnitTestEntity.comp  UnitTestEntity.wgsl  Utils.glsl  Utils.wgsl
Shaders/Templates/: GridCache2D.wgsl.template
Src/: Core.cpp  Core.h  EditorViewers.cpp  EditorViewers.h  Geometry.cpp  Geometry.h  HexGrid.cpp  IncludeAll.cpp  IncludeAll.h  LinearAlgebra.cpp  LinearAlgebra.h  NeshnyDebugUtils.cpp  NeshnyDebugUtils.h  NeshnyStructs.h  NeshnyUtils.cpp  NeshnyUtils.h  Resources.cpp  Resources.h  Serialization.h  Testing.cpp
Src/OpenGL/: EntityGL.h  GLUtils.cpp  PipelineGL.cpp  PipelineGL.h
Src/Shaders/: CacheUtils.wgsl  Debug.vert  DebugPoint.frag  DebugTriangle.vert  EntityCreation.wgsl  GridCache2D.wgsl  GridCache2D.wgsl.template  GridCache3D.wgsl  GridCache3D.wgsl.template  PBR.wgsl  Query.comp  Random.glsl  Random.wgsl  RayTracing.wgsl  SimplePoint.wgsl  SimpleTexture.wgsl  SkyBox.wgsl  Skybox.frag  UnitTest.comp  UnitTestCache.wgsl  UnitTestEntity.comp  Utils.glsl  Utils.wgsl
Src/UnitTests/: EntityTest.cpp  GeometryTest.cpp  SSBOTest.cpp  Serialization.cpp  TextureTest.cpp  Vec2Test.cpp
Src/Utils/ImGuiQTAdapter/: QtImGui.h  QtImGuiRenderer.cpp  QtImGuiRenderer.h
Src/WebGPU/: EntityWebGPU.cpp  EntityWebGPU.h  PipelineWebGPU.cpp  PipelineWebGPU.h  WGPUUtils.cpp  WGPUUtils.h
UnitTests/: EntityTest.cpp  PreprocessorTest.cpp  SSBOTest.cpp  Serialization.cpp  UtilsTest.cpp  Vec2Test.cpp
Utils/ImGuiQTAdapter/: QtImGui.cpp  QtImGui.h  QtImGuiRenderer.cpp  QtImGuiRenderer.h
glad/: glad.c
